--- a/Chicco Tiendas/PuntaNorte2/Cube.html
+++ b/Chicco Tiendas/PuntaNorte2/Cube.html
@@ -644,16 +644,16 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i216.text.css:text/base/css*/
-#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Linotte_Regular; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i216.i217.positioning.css:positioning/base/css.1*/
-#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 211px; height: 34px;
-        -ms-transform: translate(0, 0) translate(17px, 202px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(17px, 202px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(17px, 202px) rotate(0deg);
-        transform: translate(0, 0) translate(17px, 202px) rotate(0deg);
+#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 211px; height: 35px;
+        -ms-transform: translate(0, 0) translate(17px, 198px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(17px, 198px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(17px, 198px) rotate(0deg);
+        transform: translate(0, 0) translate(17px, 198px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Linotte_Regular; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 230px; height: 24px;
         -ms-transform: translate(-50%, -50%) translate(-18px, 68px) rotate(0deg);
@@ -703,7 +703,7 @@ url('fonts/') format('svg');
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i218.text.css:text/base/css*/
-#i218 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: FrutigerLTStd-Roman; font-size: 14px; color: #000000; font-weight: normal; font-style: italic; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i218 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: italic; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i218.i219.positioning.css:positioning/base/css.1*/
 #i218 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 238px; height: 24px;
         -ms-transform: translate(0, 0) translate(16px, 213px) rotate(0deg);
@@ -712,7 +712,7 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(16px, 213px) rotate(0deg);
 }
 /*#/#*//*#i5.i187.text.css:text/base/css*/
-#i187 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: FrutigerLTStd-Roman; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i187 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i187.i188.positioning.css:positioning/base/css.1*/
 #i187 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 226px; height: 40px;
         -ms-transform: translate(-50%, -50%) translate(-18px, 73px) rotate(0deg);
@@ -819,22 +819,13 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(79px, 140px) rotate(0deg);
 }
 /*#/#*//*#i6.i252.text.css:text/base/css*/
-#i252 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i252 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Linotte_Regular; font-size: 16px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i252.i253.positioning.css:positioning/base/css.1*/
-#i252 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 267px; height: 24px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 68px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 68px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 68px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 68px) rotate(0deg);
-}
-/*#/#*//*#i6.i254.text.css:text/base/css*/
-#i254 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i254.i255.positioning.css:positioning/base/css.1*/
-#i254 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 211px; height: 34px;
-        -ms-transform: translate(0, 0) translate(17px, 202px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(17px, 202px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(17px, 202px) rotate(0deg);
-        transform: translate(0, 0) translate(17px, 202px) rotate(0deg);
+#i252 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 204px; height: 65px;
+        -ms-transform: translate(-50%, -50%) translate(-31px, 88px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-31px, 88px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-31px, 88px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-31px, 88px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -857,14 +848,14 @@ url('fonts/') format('svg');
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i225.font-local.css:font/font-local/css*/
-/*#i225.i226.font-local.css:font-local/css.1*/
+/*#/#*//*#i256.font-local.css:font/font-local/css*/
+/*#i256.i257.font-local.css:font-local/css.1*/
 @font-face {
-font-family: 'FrutigerLTStd-Roman';
+font-family: 'Linotte_Regular';
 src: url('fonts/');
 src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/') format('woff'),
-url('fonts/FrutigerLTStd-Roman.ttf') format('truetype'),
+url('fonts/Linotte_Regular.woff') format('woff'),
+url('fonts/') format('truetype'),
 url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
@@ -882,9 +873,9 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i216.text.html:text/html-->
-<div id="i216">Ven a nuestras tiendas Chicco y disfruta hasta un 25% de descuento.</div>
+<div id="i216">Al mostrar este cupón en nuestras tiendas Chicco.</div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">En el mes del Autoasiento</div>
+<div id="i14">30% de descuento</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/1sNBOAW.gif"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -904,7 +895,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i223.image.html:image/html-->
-<img id="i223" src="https://i.imgur.com/uDiMj4H.png"/>
+<img id="i223" src="https://i.imgur.com/3llqJNX.jpg"/>
 <!--#/#--><!--#i5.i240.image.html:image/html-->
 <img id="i240" src="https://i.imgur.com/BwTcPHZ.png"/>
 <!--#/#--><!--#i5.i244.image.html:image/html-->
@@ -926,9 +917,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i248.image.html:image/html-->
 <img id="i248" src="https://i.imgur.com/BwTcPHZ.png"/>
 <!--#/#--><!--#i6.i252.text.html:text/html-->
-<div id="i252">Te esperamos</div>
-<!--#/#--><!--#i6.i254.text.html:text/html-->
-<div id="i254">En nuestras tiendas Chicco.</div>
+<div id="i252">Encuentra lo mejor para tu bebé en Chicco y recibe 30% al presentar este cupón.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -946,7 +935,7 @@ url('fonts/') format('svg');
         <span>Swipe</span>
     </div>
 </div>
-<!--#/#--><!--#i225.font.html:font/html-->
+<!--#/#--><!--#i256.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i2.cube.js:cube/js.1*/
@@ -996,7 +985,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/qm8bZM7EstRwDv3Y9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eZ5VdnDpKGL7wfT78'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -1031,7 +1020,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/qm8bZM7EstRwDv3Y9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eZ5VdnDpKGL7wfT78'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
@@ -1049,7 +1038,7 @@ bmShow('i238');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/qm8bZM7EstRwDv3Y9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eZ5VdnDpKGL7wfT78'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i246.image.js:image/base/js*/
@@ -1108,7 +1097,7 @@ name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i216.text.meta:text/meta*/
-name: Ven a nuestras tiendas Chicco y disfruta hasta un 25% de descuento.; customName: false;
+name: Al mostrar este cupón en nuestras tiendas Chicco.; customName: false;
 /*#/#*//*#i216.i217.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i14.text.meta:text/meta*/
@@ -1121,13 +1110,13 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i181.image.meta:image/meta*/
-name: csir86S.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i4.i232.image.meta:image/meta*/
-name: BwTcPHZ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i232.i233.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
@@ -1149,18 +1138,18 @@ name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i223.image.meta:image/meta*/
-name: uDiMj4H.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 3llqJNX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i223.i224.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i5.i240.image.meta:image/meta*/
-name: BwTcPHZ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i240.i241.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i244.image.meta:image/meta*/
-name: csir86S.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i244.i245.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
@@ -1183,22 +1172,18 @@ customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i6.i246.image.meta:image/meta*/
-name: csir86S.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i246.i247.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i248.image.meta:image/meta*/
-name: BwTcPHZ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i248.i249.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i252.text.meta:text/meta*/
 name: Texto; customName: 1;
 /*#/#*//*#i252.i253.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i254.text.meta:text/meta*/
-name: En nuestras tiendas Chicco.; customName: false;
-/*#/#*//*#i254.i255.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
@@ -1206,6 +1191,6 @@ name: Link;
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i225.font.meta:font/meta*/
-name: Web Font: FrutigerLTStd-Roman; type: font-local; customName: ;
+/*#/#*//*#i256.font.meta:font/meta*/
+name: Web Font: Linotte_Regular; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
