--- a/Chicco Tiendas/PuntaNorte2/Venetian_300x600.html
+++ b/Chicco Tiendas/PuntaNorte2/Venetian_300x600.html
@@ -2135,23 +2135,24 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i62.image.css:image/base/css*/
 #i62 { opacity: 1; }
-/*#/#*//*#i60.text.css:text/base/css*/
-#i60 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i60.i61.positioning.css:positioning/base/css.2*/
-#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 287px; height: 50px;
-        -ms-transform: translate(0, 0) translate(7px, 390px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(7px, 390px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(7px, 390px) rotate(0deg);
-        transform: translate(0, 0) translate(7px, 390px) rotate(0deg);
+/*#/#*//*#i71.shape.css:shape/base/css*/
+#i71 { background-color: #ffffff; opacity: 1;
 }
-/*#/#*//*#i50.text.css:text/base/css*/
-#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 287px; height: 24px;
-        -ms-transform: translate(0, 0) translate(7px, 360px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(7px, 360px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(7px, 360px) rotate(0deg);
-        transform: translate(0, 0) translate(7px, 360px) rotate(0deg);
+/*#/#*//*#i71.i72.positioning.css:positioning/base/css.2*/
+#i71 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 11.166666666666666%;
+        -ms-transform: translate(0, 0) translate(0px, 414px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 414px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 414px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 414px) rotate(0deg);
+}
+/*#/#*//*#i60.text.css:text/base/css*/
+#i60 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Linotte_Regular; font-size: 19px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i60.i61.positioning.css:positioning/base/css.2*/
+#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 271px; height: 74px;
+        -ms-transform: translate(0, 0) translate(15px, 366px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(15px, 366px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(15px, 366px) rotate(0deg);
+        transform: translate(0, 0) translate(15px, 366px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2244,11 +2245,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i62.i63.positioning.css:positioning/base/css.2*/
-#i62 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 120px;
-        -ms-transform: translate(0, 0) translate(1px, 480px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 480px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 480px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 480px) rotate(0deg);
+#i62 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
+        -ms-transform: translate(0, 0) translate(1px, 417px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(1px, 417px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(1px, 417px) rotate(0deg);
+        transform: translate(0, 0) translate(1px, 417px) rotate(0deg);
 }
 /*#/#*//*#i65.image.css:image/base/css*/
 #i65 { opacity: 1; }
@@ -2263,17 +2264,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 492px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 492px) rotate(0deg);
 }
-/*#/#*//*#i26.button.css:button/base/css*/
-#i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(153,153,153,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
-#i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 298px; height: 598px;
-        -ms-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+/*#/#*//*#i67.shape.css:shape/base/css*/
+#i67 { background-color: #dedede; opacity: 0.00;
 }
+/*#/#*//*#i67.i68.positioning.css:positioning/base/css.2*/
+#i67 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i73.font-local.css:font/font-local/css*/
+/*#i73.i74.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'Linotte_Regular';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/Linotte_Regular.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2281,12 +2293,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i62.image.html:image/html-->
-<img id="i62" src="https://i.imgur.com/GECkVkb.png"/>
+<img id="i62" src="https://i.imgur.com/3llqJNX.jpg"/>
+<!--#/#--><!--#i71.shape.html:shape/html-->
+<div id="i71"></div>
 <!--#/#--><!--#i60.text.html:text/html-->
-<div id="i60">Hasta el 25% de descuento
-¡No te lo puedes perder!</div>
-<!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">El mes del autoasiento</div>
+<div id="i60">Encuentra lo mejor para tu bebé en Chicco y recibe 30% al presentar este cupón.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2305,8 +2316,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i16" src="https://i.imgur.com/csir86S.png"/>
 <!--#/#--><!--#i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/BwTcPHZ.png"/>
-<!--#/#--><!--#i26.button.html:button/html-->
-<button id="i26"></button>
+<!--#/#--><!--#i67.shape.html:shape/html-->
+<div id="i67"></div>
+<!--#/#--><!--#i73.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2317,8 +2329,6 @@ bmShow('i30');
 bmShow('i62');
 /*#/#*//*#i60.i61.positioning.js:positioning/base/js.2*/
 bmShow('i60');
-/*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
-bmShow('i50');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2377,21 +2387,23 @@ bmShow('i16');
 
 /*#/#*//*#i58.i59.positioning.js:positioning/base/js.2*/
 bmShow('i58');
-/*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
-bmShow('i26');
-/*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
+/*#/#*//*#i67.i68.positioning.js:positioning/base/js.2*/
+bmShow('i67');
+/*#/#*//*#i67.i69.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i26');
+var el = document.getElementById('i67');
 
 el.addEventListener('click', function(e){
-    /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/qm8bZM7EstRwDv3Y9'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i69.i70.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eZ5VdnDpKGL7wfT78'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i71.i72.positioning.js:positioning/base/js.2*/
+bmShow('i71');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2414,13 +2426,13 @@ name: MAPITA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i62.i63.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i60.text.meta:text/meta*/
-name: Hasta el 25% de descuento ¡No te lo puedes perder!; customName: false;
-/*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i71.shape.meta:shape/meta*/
+name: Shape 3;
+/*#/#*//*#i71.i72.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i50.text.meta:text/meta*/
-name: El mes del autoasiento; customName: false;
-/*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i60.text.meta:text/meta*/
+name: Encuentra lo mejor para tu bebé en Chicco y recibe 30% al presentar este cupón.; customName: false;
+/*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
@@ -2452,9 +2464,10 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i26.button.meta:button/meta*/
-name: ;
-customName: false;
-/*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i67.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i67.i68.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i73.font.meta:font/meta*/
+name: Web Font: Linotte_Regular; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
