--- a/Chicco Tiendas/PuntaNorte2/Venetian_300x600.html
+++ b/Chicco Tiendas/PuntaNorte2/Venetian_300x600.html
@@ -2303,11 +2303,11 @@ url('fonts/') format('svg');
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/sAHJFQq.jpg"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
-<dataimg id="i37" src="https://i.imgur.com/lfZuTVu.png"></dataimg>
+<dataimg id="i37" src="https://i.imgur.com/mWT1saa.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/BmZlaTD.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/fJXza4s.jpg"></dataimg>
 <!--#/#--><!--#i2.i64.slice-image.html:slice-image/html.1-->
-<dataimg id="i64" src="https://i.imgur.com/wySXEEt.png"></dataimg>
+<dataimg id="i64" src="https://i.imgur.com/lzFFf8K.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i65.image.html:image/html-->
@@ -2440,12 +2440,12 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: sAHJFQq.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
-name: lfZuTVu.png; fileId: ; sourceTypeId: externalUrl;
+name: mWT1saa.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: BmZlaTD.png; fileId: ; sourceTypeId: externalUrl;
+name: fJXza4s.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i64.slice-image.meta:slice-image/meta.1*/
-name: wySXEEt.png; fileId: ; sourceTypeId: externalUrl;
+name: lzFFf8K.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
